Fix [Alerts] The Event type filter doesn't align with the Entity type option (#3099)

--- a/src/common/TabsSlider/tabsSlider.scss
+++ b/src/common/TabsSlider/tabsSlider.scss
@@ -42,6 +42,8 @@
     }
 
     &-icon {
+      display: inline-flex;
+
       svg {
         width: 20px;
         height: 20px;
