--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -240,10 +240,6 @@ main {
 
         @include tableDet(8px, 5px, 8px, 10px);
 
-        &:first-child {
-          padding-left: 30px;
-        }
-
         &.table-cell {
           &-name {
             position: sticky;
